# wise

./: CMakeLists.txt  README.md
load_library/app/: CMakeLists.txt  main.cpp
load_library/lib/: CMakeLists.txt  audio_capture.cpp  audio_capture.h  desktop_capture.cpp  desktop_capture.h  mylib.cpp  mylib.h
proto/: speed_test.py
src/: CMakeLists.txt  Makefile  cmake_install.cmake  cublas_utils.h  main.cu
src/neuron/: CMakeLists.txt  neuron.cu  neuron.h
